@@ -6,9 +6,9 @@
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="program_name">SpaceFM</property>
     <property name="comments" translatable="yes">by IgnorantGuru</property>
-    <property name="copyright" translatable="yes">Copyright (C) 2016   GPL3+</property>
+    <property name="copyright" translatable="yes">Copyright (C) 2018   GPL3+</property>
     <property name="website">http://ignorantguru.github.io/spacefm/</property>
-    <property name="license" translatable="yes">SpaceFM - Copyright (C) 2016 IgnorantGuru  GPL3+
+    <property name="license" translatable="yes">SpaceFM - Copyright (C) 2018 IgnorantGuru  GPL3+
 
 This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
 
@@ -17,7 +17,8 @@ USE AT YOUR OWN RISK.  This program is distributed in the hope that it will be u
 The 'exo' libraries and source code used by this software are licensed under the GNU General Public License and the GNU Lesser General Public License version 3 (LGPL3).
 
 You should have received a copy of the GNU General Public License and the GNU Lesser General Public License along with this program; if not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.</property>
-<property name="authors" translatable="yes">IgnorantGuru &lt;ignorantguru@gmx.com&gt;
+<property name="authors" translatable="yes">Lead Developer:
+    IgnorantGuru &lt;igsw@fastmail.com&gt;
 
 Contributors:
     BwackNinja &lt;BwackNinja@gmail.com&gt;
